core/test/fixtures/invalid-gatherers/missing-after-pass.js
/**
 * @license
 * Copyright 2016 Google LLC
 * SPDX-License-Identifier: Apache-2.0
 */

class MissingAfterPass {
  beforePass() {}
  pass() {}
}

export default MissingAfterPass;
